[FIX] tr.diffheader functions as table header so can have same default styles. Provide default text color where background color is specified (wiki diff tds) to avoid contrast problems in themes with light text color.
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/trunk@19386 b456876b-0849-0410-b77d-98878d47e9d5

--- a/styles/layout/layout.css
+++ b/styles/layout/layout.css
@@ -895,7 +895,9 @@ td.even {
 	border-collapse: collapse}
 
 /* Headings */
-th, td.heading {text-align: center}
+th,
+td.heading,
+tr.diffheader {text-align: center}
 
 form.admin {}
 form.admin fieldset {}
@@ -1137,9 +1139,9 @@ ul.toc * {border: none}
 /* Wiki diff styles */
 .diff td {border: 1px solid #696969}
 .diff div {border-top: 1px solid #696969}
-.diffheader {background: #696969; font-weight: bold}
-.diffadded {background: #ccffcc}
-.diffdeleted {background: #ffcccc}
+.diffbody {color: #000}
+.diffadded {background: #ccffcc; color: #000}
+.diffdeleted {background: #ffcccc; color: #000}
 
 .diffinldel {
 	background: #ffcccc;
